--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ form {
     /* width: 150px; */
     width: 100%; 
     height: 100%
+    
 }
 
 button {
@@ -38,6 +39,7 @@ button {
     max-width: 30px;
     max-height: 30px;
     border: 0;
+    cursor: pointer;
 }
 
 .list {
@@ -119,6 +121,7 @@ button {
 
 .city_like {
     margin-right: 16px;
+    cursor: pointer;
 }
 
 /* block_liked */
@@ -141,8 +144,17 @@ button {
 
 .list_elem {
     margin-top: 10px;
-    /* width: 200px; */
+    cursor: pointer;
 }
+
+.list_elem:hover {
+    text-decoration: underline;
+}
+
+.list_elem:hover .img_close {
+    opacity: 1;
+}
+
 
 .img_close {
     width: 15px;
@@ -150,6 +162,10 @@ button {
 
     margin-top: 8px;
     margin-left: 10px;
+    opacity: 0;
 }
 
+.other_block {
+    display: flex;
+}
 
