--- a/main.css
+++ b/main.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
+
 body {
     background-color: rgb(255, 255, 255);
     background-image: url(img30.png);
     background-size: 100%;
+
+    scrollbar-width: thin; /* Ширина скроллбара */
+    scrollbar-color:inherit;
 }
+
 
 form {
     display: flex;
@@ -64,14 +70,18 @@ button {
     
     height: 360px;
     border: 1px solid;
-    margin-top: 150px;
 
     border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.603);
     background-color: rgba(255, 255, 255, 0.096);
     box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.171);
 
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(7px);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
 }
 
 .search {
@@ -149,9 +159,25 @@ button {
 .liked_list {
     padding-top: 10px;
     padding-left: 10px;
+    margin-top: 2px;
+    margin-right: 2px;
+    padding-bottom: -10;
     font-size: 24px;
-    overflow: auto;
-    height: 244px;
+    overflow-y: scroll;
+    max-height: 235px;
+
+}
+
+.liked_list::-webkit-scrollbar {
+
+    width: 6px;
+    background-color: #ffffff00;
+}
+
+.liked_list::-webkit-scrollbar-thumb {
+    background-color: #2e2e2e67;
+    border-radius: 2px;
+    /* border: 1px solid rgba(10, 10, 10, 0.281); */
 }
 
 .list_elem {
