--- a/main.css
+++ b/main.css
@@ -169,13 +169,16 @@ button {
 }
 
 .liked_list::-webkit-scrollbar {
-
     width: 6px;
     background-color: #ffffff00;
 }
 
+.liked_list::-webkit-scrollbar-thumb:hover {
+    background-color: #2e2e2e7e;
+}
+
 .liked_list::-webkit-scrollbar-thumb {
-    background-color: #2e2e2e67;
+    background-color: #2e2e2e60;
     border-radius: 2px;
     /* border: 1px solid rgba(10, 10, 10, 0.281); */
 }
