--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: rgb(255, 255, 255);
-    background-image: url(img30.png);
+    background-image: url(background.png);
     background-size: 100%;
 
     scrollbar-width: thin; /* Ширина скроллбара */
