--- a/main.css
+++ b/main.css
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 body {
     background-color: rgb(255, 255, 255);
-    background-image: url(background.png);
-    background-size: 100%;
-
-    scrollbar-width: thin; /* Ширина скроллбара */
+    background-image: url(pictures/background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+    scrollbar-width: thin;
     scrollbar-color:inherit;
 }
-
 
 form {
     display: flex;
